--- a/biome.json
+++ b/biome.json
@@ -7,7 +7,7 @@
   "linter": {
     "enabled": true,
     "rules": {
-      "recommended": true
+      "recommended": true,
       "nursery": {
         "useSortedClasses": {
           "level": "warn",
@@ -20,8 +20,7 @@
     "actions": {
       "source": {
         "organizeImports": "on"
-        }
       }
     }
-  },
+  }
 }
